<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    <!-- Superior Bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/checkpoint_height"
        android:background="@color/bg_green" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/checkpoint_title" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_configuration"
            android:contentDescription="@string/configuration"
            android:layout_marginRight="@dimen/margin_text"
            android:onClick="goToConfiguration" />
    </RelativeLayout>
    
    <!-- Date and Total -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/screen_title"
        android:gravity="center_vertical" >
        
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_text"
            android:contentDescription="@string/yesterday"
            android:background="@drawable/selector_yesterday"
            android:onClick="goToYesterday" />

        <TextView
            android:id="@+id/mainTextViewShowingDate"
            android:layout_width="@dimen/date_text_width"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray"
            android:text="@string/date"
            android:gravity="center"
            android:clickable="true"
            android:onClick="showDatePopup" />
        
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tomorrow"
            android:background="@drawable/selector_tomorrow"
            android:onClick="goToTomorrow" />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_text"
            android:textColor="@color/text_gray"
            android:text="@string/total" />
        
        <TextView
            android:id="@+id/mainTextViewTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_default"
            android:textColor="@color/text_green"
            android:text="@string/hour" />
        
    </LinearLayout>
    
    <!-- Border -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/border_height"
        android:layout_marginBottom="@dimen/border_height"
        android:background="@color/bg_green" />
    
    <!-- ListView -->
    <ListView
        android:id="@+id/mainListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/white" />
    
</LinearLayout>