<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >
    
    <!-- Superior Bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/checkpoint_height"
        android:background="@color/bg_green" >
        
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back"
            android:background="@drawable/selector_back"
            android:layout_marginLeft="@dimen/margin_text"
            android:onClick="back" />
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/checkpoint_title" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/screen_title"
        android:gravity="center"
        android:text="@string/find_comment"
        android:textColor="@color/text_gray_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <!-- Border -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/border_height"
        android:layout_marginBottom="@dimen/border_height"
        android:background="@color/bg_green" />
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:layout_marginBottom="@dimen/border_height"
        android:background="@color/bg_gray_content">

        <EditText
            android:id="@+id/findCommentEditTextComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:hint="@string/type_comment" >

            <requestFocus />
        </EditText>
        
        <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/find"
	        android:textColor="@color/white"
	        android:padding="@dimen/buttons_green_padding"
	        android:background="@drawable/selector_green_button"
	        android:onClick="findComment" />
        
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
	    <ExpandableListView
	        android:id="@+id/findCommentExpandableListView"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:divider="@color/white" />

	    <LinearLayout 
	        android:id="@+id/findCommentLinearLayoutNotFound"
	        android:orientation="vertical"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center">
            <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/comment_not_found"
		        android:textColor="@color/text_gray" />
	        
		    <TextView
		        android:id="@+id/findCommentTextViewComment"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/comment"
		        android:textColor="@color/text_green" />
	    </LinearLayout>

    </RelativeLayout>
    
</LinearLayout>