<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_popup"
    android:gravity="center">
    
    <!-- Content -->
    <LinearLayout
	    android:layout_width="@dimen/popup_width"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@color/white"
	    android:padding="@dimen/popup_intern_padding">
	    
        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/popup_title_height"
            android:text="@string/alarm"
            android:textColor="@color/white"
            android:background="@color/bg_green"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin_text"
            android:layout_marginBottom="@dimen/popup_intern_padding" />
        
        <LinearLayout
            android:orientation="vertical"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:background="@color/bg_gray_content"
	        android:layout_marginBottom="@dimen/popup_intern_padding">
	    	
	        <LinearLayout
	            android:orientation="horizontal"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_marginTop="@dimen/margin_default">
		    	<TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/exit_time"
		            android:textColor="@color/text_gray"
		            android:layout_marginLeft="@dimen/margin_text"
		            android:layout_marginRight="@dimen/margin_text" />
		    	
		        <TextView
		            android:id="@+id/popupAlarmTextViewExitTime"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/hour"
		            android:textColor="@color/text_green" />
	        </LinearLayout>
	        
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@color/bg_gray_content"
	            android:text="@string/alarm_turn_on"
	            android:textColor="@color/text_gray"
	            android:layout_marginLeft="@dimen/margin_text"
	            android:layout_marginBottom="@dimen/margin_default" />
	    </LinearLayout>
        
        <LinearLayout 
            android:orientation="horizontal"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center">
	        
	        <Button
	            android:id="@+id/popupAlarmButtonTurnOff"
	            android:layout_width="@dimen/popup_button_width"
	            android:layout_height="@dimen/popup_button_height"
	            android:text="@string/turn_off"
	            android:textColor="@color/white"
	            android:background="@drawable/selector_green_button"
	            android:layout_marginRight="@dimen/margin_text" />
	        
	        <Button
	            android:id="@+id/popupAlarmButtonTurnOn"
	            android:layout_width="@dimen/popup_button_width"
	            android:layout_height="@dimen/popup_button_height"
	            android:text="@string/turn_on"
	            android:textColor="@color/white"
	            android:background="@drawable/selector_green_button" />
	
        </LinearLayout>

	</LinearLayout>
</LinearLayout>