<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
	<LinearLayout
	      android:layout_width="match_parent"
	      android:layout_height="@dimen/row_height"
	      android:orientation="horizontal"
	      android:gravity="center_vertical"
	      android:background="@drawable/selector_listview_group" >
	    
	       <com.nunesrafael.android.checkpoint.widget.TextViewPlus
		        android:id="@+id/rowRelatoryGroupTextViewDayOfWeek"
		       	android:layout_width="@dimen/day_of_week_width"
		       	android:layout_height="wrap_content"
		       	android:text="@string/day"
		       	android:textColor="@color/text_gray_header"
		       	android:layout_marginLeft="@dimen/margin_row_group"
		       	android:layout_marginRight="@dimen/margin_text"
                custom:fontNameTextViewPlus="roboto" />
	       
	       <com.nunesrafael.android.checkpoint.widget.TextViewPlus
	            android:id="@+id/rowRelatoryGroupTextViewDate"
		       	android:layout_width="0dp"
		       	android:layout_height="wrap_content"
		       	android:layout_weight="1"
		       	android:text="@string/day"
		       	android:textColor="@color/text_green"
		       	android:layout_marginRight="@dimen/margin_text"
               custom:fontNameTextViewPlus="roboto" />
	       
	       <com.nunesrafael.android.checkpoint.widget.TextViewPlus
		       	android:layout_width="wrap_content"
		       	android:layout_height="wrap_content"
		       	android:text="@string/total_day"
		       	android:textColor="@color/text_gray_header"
		       	android:layout_marginRight="@dimen/margin_text"
               custom:fontNameTextViewPlus="roboto" />
	       
	       <com.nunesrafael.android.checkpoint.widget.TextViewPlus
		        android:id="@+id/rowRelatoryGroupTextViewTotalOfDay"
		       	android:layout_width="wrap_content"
		       	android:layout_height="wrap_content"
		       	android:text="@string/hour"
		       	android:textColor="@color/text_green"
		       	android:layout_marginRight="@dimen/margin_default"
               custom:fontNameTextViewPlus="roboto" />
	</LinearLayout>
	
	<!-- Border -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/border_height"
        android:layout_marginBottom="@dimen/border_height"
        android:background="@color/bg_green" />
</LinearLayout>